--- a/back_end/package.json
+++ b/back_end/package.json
@@ -13,6 +13,7 @@
     "cron": "^1.5.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.8",
-    "mongoose-unique-validator": "^2.0.2"
+    "mongoose-unique-validator": "^2.0.2",
+    "zeromq": "^5.1.0"
   }
 }
