--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.linting.pylintEnabled": true,
-    "python.pythonPath": "usr/bin/python2"
+    "python.pythonPath": "/usr/bin/python"
 }
